--- a/scss/globals/_globals.scss
+++ b/scss/globals/_globals.scss
@@ -3,6 +3,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
   min-height: 100vh;
   background-color: var(--cl-dark-gray-1);
 }
