--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -1,33 +1,106 @@
 .container {
-  max-width: 54rem;
+  width: 54rem;
+  // width: 54rem;
+  // min-width: 34.3rem;
 
   &__heading {
-    font-size: var(--fs-heading-l);
+    font-size: var(--fs-heading-m);
     color: var(--cl-light-gray-1);
+    margin-bottom: 3.2rem;
   }
 }
 
-.card {
+.password {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 1.9rem 3.2rem;
+  margin-bottom: 2.4rem;
   background-color: var(--cl-dark-gray-2);
 
-  .password {
+  &__output {
+    font-size: var(--fs-heading-l);
+    color: var(--cl-light-gray-2);
+  }
+
+  &__copy-btn {
+    width: 2.1rem;
+    height: 2.4rem;
+    background-color: inherit;
+    border: none;
+    cursor: pointer;
+
+    .icon {
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
+.selectors {
+  background-color: var(--cl-dark-gray-2);
+  padding: 2.4rem 3.2rem 3.2rem;
+
+  &__text {
+    width: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    margin-bottom: 2.6rem;
 
-    &__output {
+    .description {
+      font-size: var(--fs-body-m);
+      color: var(--cl-light-gray-2);
     }
 
-    &__copy-btn {
-      width: 2.1rem;
-      height: 2.4rem;
-      background-color: inherit;
-      border: none;
-      cursor: pointer;
-
-      .icon {
-        width: 100%;
-        height: 100%;
-      }
+    .range__value {
+      font-size: var(--fs-heading-l);
+      color: var(--cl-neon-green);
     }
+  }
+
+  &__slider {
+    outline: none;
+    appearance: none;
+    width: 100%;
+    height: 0.8rem;
+    background: linear-gradient(
+      to right,
+      var(--cl-dark-gray-1) 50%,
+      var(--cl-dark-gray-1) 50%
+    );
+  }
+
+  // FIX FOR CHROME
+  &__slider::-webkit-slider-thumb {
+    appearance: none;
+    width: 2.8rem;
+    height: 2.8rem;
+    background-color: var(--cl-light-gray-2);
+    border-radius: 100%;
+    cursor: pointer;
+    transition: background-color 0.2s;
+  }
+
+  &__slider::-webkit-slider-thumb:hover {
+    background-color: var(--cl-dark-gray-1);
+    border: 2px solid var(--cl-neon-green);
+  }
+
+  // FIX FOR FIREFOX
+  &__slider::-moz-range-thumb {
+    appearance: none;
+    width: 2.8rem;
+    height: 2.8rem;
+    background-color: var(--cl-light-gray-2);
+    border-radius: 100%;
+    cursor: pointer;
+    transition: background-color 0.2s;
+  }
+
+  &__slider::-moz-range-thumb:hover {
+    background-color: var(--cl-dark-gray-1);
+    border: 2px solid var(--cl-neon-green);
   }
 }
