--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  text-align: center;
   min-height: 100vh;
   background-color: var(--cl-dark-gray-1);
 }
@@ -41,6 +40,9 @@ body {
 }
 .container {
   width: 54rem;
+}
+.container > .container__heading {
+  text-align: center;
 }
 .container__heading {
   font-size: var(--fs-heading-m);
@@ -94,6 +96,7 @@ body {
 }
 .selectors__range-box {
   position: relative;
+  margin-bottom: 3.2rem;
 }
 .selectors__progress {
   position: absolute;
@@ -142,5 +145,41 @@ body {
 }
 .selectors__slider::-moz-range-thumb:hover {
   background-color: var(--cl-dark-gray-1);
+  border: 2px solid var(--cl-neon-green);
+}
+.selectors__check-box--container {
+  display: grid;
+  gap: 2rem;
+}
+.selectors__check-box--container .check__box {
+  display: flex;
+  align-items: center;
+}
+.selectors__check-box--container .check__box-input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+.selectors__check-box--container .check__box-label {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 2.4rem;
+  font-size: var(--fs-body-m);
+  color: var(--cl-light-gray-2);
+}
+.selectors__check-box--container .check__box-label::before {
+  content: "";
+  width: 2rem;
+  height: 2rem;
+  border: 2px solid var(--cl-light-gray-2);
+  transition: 0.2s;
+}
+.selectors__check-box--container .check__box-label:hover::before, .selectors__check-box--container .check__box-input:hover + label::before {
+  border: 2px solid var(--cl-neon-green);
+}
+.selectors__check-box--container .check__box-input:checked + label::before {
+  content: url("assets/images/sprite.svg#icon-check");
+  background-color: var(--cl-neon-green);
   border: 2px solid var(--cl-neon-green);
 }/*# sourceMappingURL=main.css.map */
