--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -3,6 +3,10 @@
   // width: 54rem;
   // min-width: 34.3rem;
 
+  & > &__heading {
+    text-align: center;
+  }
+
   &__heading {
     font-size: var(--fs-heading-m);
     color: var(--cl-light-gray-1);
@@ -62,6 +66,7 @@
 
   &__range-box {
     position: relative;
+    margin-bottom: 3.2rem;
   }
 
   &__progress {
@@ -118,5 +123,56 @@
   &__slider::-moz-range-thumb:hover {
     background-color: var(--cl-dark-gray-1);
     border: 2px solid var(--cl-neon-green);
+  }
+
+  // CHECK BOXES
+  &__check-box--container {
+    display: grid;
+    gap: 2rem;
+
+    .check__box {
+      display: flex;
+      align-items: center;
+
+      &-input {
+        position: absolute;
+        opacity: 0;
+        cursor: pointer;
+      }
+
+      // &-input:hover + &-label:hover::before {
+      //   background-color: red;
+      // }
+
+      &-label {
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        gap: 2.4rem;
+        font-size: var(--fs-body-m);
+        color: var(--cl-light-gray-2);
+      }
+
+      &-label::before {
+        content: '';
+        width: 2rem;
+        height: 2rem;
+        border: 2px solid var(--cl-light-gray-2);
+        transition: 0.2s;
+      }
+
+      &-label:hover::before,
+      &-input:hover + label::before {
+        border: 2px solid var(--cl-neon-green);
+      }
+
+      &-input:checked + label::before {
+        content: url('assets/images/sprite.svg#icon-check');
+        // width: 100%;
+        // height: 100%;
+        background-color: var(--cl-neon-green);
+        border: 2px solid var(--cl-neon-green);
+      }
+    }
   }
 }
