--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -37,7 +37,7 @@
 
   &__output {
     font-size: var(--fs-heading-l);
-    color: var(--cl-light-gray-2);
+    color: var(--cl-light-gray-1);
   }
 
   &__copy-btn {
@@ -220,6 +220,28 @@
     color: var(--cl-light-gray-2);
     text-transform: uppercase;
     margin-right: 1.55rem;
+  }
+
+  &__bars-container {
+    display: flex;
+    align-items: center;
+
+    &[data-value='1'] :nth-child(1) {
+      background-color: var(--cl-red);
+      border: none;
+    }
+    &[data-value='2'] :nth-child(-n + 2) {
+      background-color: var(--cl-orange);
+      border: none;
+    }
+    &[data-value='3'] :nth-child(-n + 3) {
+      background-color: var(--cl-yellow);
+      border: none;
+    }
+    &[data-value='4'] :nth-child(-n + 4) {
+      background-color: var(--cl-neon-green);
+      border: none;
+    }
   }
 
   &__bar {
