--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -220,6 +220,7 @@
     color: var(--cl-light-gray-2);
     text-transform: uppercase;
     margin-right: 1.55rem;
+    visibility: hidden;
   }
 
   &__bars-container {
